--- a/camps.plist
+++ b/camps.plist
@@ -5,7 +5,7 @@
 	<key>AR</key>
 	<array>
 		<dict>
-			<key>Bentonville</key>
+			<key>From Blog</key>
 			<dict>
 				<key>TimeZone</key>
 				<string>EST</string>
