--- a/camps.plist
+++ b/camps.plist
@@ -32,7 +32,9 @@
 							<string>1:30-12:30, 13:00-24:00</string>
 							<key>sun</key>
 							<string>1:30-12:30, 13:00-24:00</string>
-							<key>10/12/2009</key>
+							<key>10/12/2010</key>
+							<string>1:30-12:30, 13:00-24:00</string>
+							<key>3/8/2010</key>
 							<string>1:30-12:30, 13:00-24:00</string>
 						</dict>
 					</dict>
